# SWABox

./: .gitignore  README.md  SWABox.spec  TESTING_GUIDE.md  main.py  pyproject.toml  version.json
Static/Q_Img/: main.qrc
Tool/360/360FAK/: 360急救箱运行不了请点我-加强版.bat  360急救箱运行不了请点我.bat  fixtool.ini
Tool/360/360FAK/Ave/: 360ave.def
Tool/360/360FAK/fix/: 360tdws64.sys  kemon64.sys  speedmem.hg
config/: pytest.ini  requirements-test.txt
data/: config.ini  data.json
doc/: API_REFERENCE.md  CHANGELOG.md  DEVELOPER_GUIDE.md  PROJECT_DOCUMENTATION.md  README.md  SPECIAL_THINKS.md
docs/: contributing.md  developer_guide.md  development.md  index.md
lib/package/: OpenExplorer.py  WifiDet.py  __init__.py
lib/page/: EMGToolPage.py  MainPage.py  Settings.py  __init__.py  main_rc.py
res/UI/: EMGToolPage.ui  MainPage.ui  Sittings.ui
scripts/: run_tests.bat  run_tests.py
src/: main.py
tests/: __init__.py  conftest.py  test_example.py  test_file_operations.py  test_integration.py  test_network.py
tests/test_data/: __init__.py  sample_config.ini
